# chromdyn

./: .gitignore  ChromatinDynamics.py  LICENSE  MANIFEST.in  README.md  UPDATES.md  analyzer.py  analyzers.py  forcefield.py  integrators.py  logger.py  optimization.py  platforms.py  pyproject.toml  run  run.py  run_rg.py  sub_sim.sh  test.ipynb  topology.py  type_interaction_table.csv  utilities.py
chromdyn/: Analyzers.py  ChromatinDynamics.py  Cndbtools.py  Forcefield.py  HiCManager.py  Integrators.py  LE_ver2.py  Optimization.py  Platforms.py  Reporters.py  StochasticModules.py  Topology.py  Utilities.py  __init__.py  _version.py  check_install.py  chromatin_dynamics.py  cndb_tools.py  forcefield.py  hic_utils.py  integrators.py  optimization.py  platforms.py  reporters.py  tools.py  topology.py  traj_utils.py  utilities.py  visualization.py
notebooks/: Finzi_collab.ipynb  PBC_sim_test.ipynb  Tutorial_Simulation.ipynb  Tutorial_active.ipynb  Tutorial_topology.ipynb  animation.ipynb  loop_extrusion.ipynb  polymer.ipynb  rg_analysis.ipynb  test_extrusion.ipynb  test_sim.ipynb
scripts/: pre_release.sh  run_force_ext_const_ext.py  run_force_ext_const_force.py  run_rg.py  sub_run_force_ext_const_ext.sh  sub_run_force_ext_const_ext_stiff.sh  sub_run_force_ext_const_force.sh  sub_run_force_ext_const_force_stiff.sh  sub_run_rg.sh
src/: Analyzers.py  ChromatinDynamics.py  Forcefield.py  HiCManager.py  Integrators.py  Logger.py  LoopExtrusion.py  Optimization.py  Platforms.py  Reporters.py  Topology.py  Utilities.py
tests/: dev.ipynb  run_rg.py  run_test.py  run_tests.py  (+2 more)
(+39 files in other folders)
